--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Data Source=AuthService.db"
+  },
+  "Jwt": {
+    "Key": "yourSecretKeyWithAtLeast32Characters1234567890",
+    "Issuer": "YourDomain.com",
+    "Audience": "YourDomain.com",
+    "Subject": "YourDomain.com"
   }
 }
